移除文档标志符号 (#24)
* 移除文档中的标志符号

* 修改了亿些文案