@@ -1,72 +1,30 @@
 # PNX-CLI Launcher Tutorial for Beginners
-## :question:How to download PNX-CLI Launcher？
-PNX-CLI Launcher 【:earth_asia:[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
-## :question:What is the PNX-CLI starter?
+## How to download PNX-CLI Launcher？
+PNX-CLI Launcher 【[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
+## What is the PNX-CLI starter?
 It allows you to quickly deploy **PowerNukkitX** servers on your host, with less footprint and easier management.
 
-## :question:How to start the server without using PNX-CLI?
+## Notes on the installation of the PNX-CLI!
+1. No spaces in the directory folder or it won't work!
 
-:one:Download libs.tar.gz and powernukkitx.jar from [:earth_asia:[release](https://github.com/PowerNukkitX/PowerNukkitX/releases)]
+2. You must install the following in the PNX_CLI installation package folder!
 
-:two:Extract the libs folder in libs.tar.gz to the same path as powernukkitx.jar
+3. The installation is not valid if the following command is entered
 
-:three:Run the following command
-
-##### :computer:Windows
-
-```
-java -Dfile.encoding=UTF-8 ^
--Djansi.passthrough=true ^
--Dterminal.ansi=true ^
--XX:+UnlockExperimentalVMOptions ^
--XX:+UseG1GC ^
--XX:+UseStringDeduplication ^
--XX:+EnableJVMCI ^
---module-path=.\libs\graal-sdk-22.2.0.jar;.\libs\truffle-api-22.2.0.jar; ^
---add-opens java.base/java.lang=ALL-UNNAMED ^
---add-opens java.base/java.io=ALL-UNNAMED ^
--cp .\powernukkitx.jar;.\libs\* ^
-cn.nukkit.Nukkit
-```
-
-##### :computer:Linux
-
-```
-java -Dfile.encoding=UTF-8 \
--Djansi.passthrough=true \
--Dterminal.ansi=true \
--XX:+UnlockExperimentalVMOptions \
--XX:+UseG1GC \
--XX:+UseStringDeduplication \
--XX:+EnableJVMCI \
---module-path=./libs/truffle-api-22.2.0.jar:./libs/graal-sdk-22.2.0.jar: \
---add-opens java.base/java.lang=ALL-UNNAMED \
---add-opens java.base/java.io=ALL-UNNAMED \
--cp ./powernukkitx.jar:./libs/* \
-cn.nukkit.Nukkit
-```
-
-## :exclamation:Notes on the installation of the PNX-CLI!
-:one:No spaces in the directory folder or it won't work!
-
-:two:You must install the following in the PNX_CLI installation package folder!
-
-:three:The installation is not valid if the following command is entered
-
-:computer:Windows CMD Try entering the following command
+Windows CMD Try entering the following command
 
 ```
 pnx sys-install
 ```
-:computer:Linux Try entering the following command
+Linux Try entering the following command
 ```
 ./pnx sys-install
 ```
-:computer:Windows PowerShell Try entering the following command
+Windows PowerShell Try entering the following command
 ```
 .\pnx sys-install
 ```
-## :question:How do I set the PNX-CLI parameters?
+## How do I set the PNX-CLI parameters?
 Create the pnx-cli-config.ini file and enter the following text:
 ```
 ##Simplified Chinese zh-cn English en-us
@@ -76,20 +34,20 @@ preferredJVM=GraalVM
 ##JVM Location
 jvmPath=D:\jdk\java17\bin
 ```
-## :question:How is the PNX-CLI starter installed?
+## How is the PNX-CLI starter installed?
 PNX-CLI offers 3 scenario deployment projects
 
 - PNX-CLI-Linux-arm
 - PNX-CLI-Linux-x86
 - PNX-CLI-Windows-x86
 Choose the right software deployment for your conditions
-### :tea:Steps to install PNX server based on PNX-CLI-Windows-x86
-1. Download the PNX-CLI-Windows-x86.zip archive 【:earth_asia:[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
+### Steps to install PNX server based on PNX-CLI-Windows-x86
+1. Download the PNX-CLI-Windows-x86.zip archive 【[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
 2. Extract the PNX-CLI-Windows-x86.zip archive using ZIP
 3. Win+R to open the Run window, type cmd in the Run window to open the command window that comes with Windows
 4. Find the folder where your PNX.exe is located on the disk
 ----
-:briefcase:**Example** :
+**Example** :
 
 > My **PNX.exe** is in the **F:**\desktop\pnx-CLI folder
 
@@ -105,7 +63,7 @@ Choose the right software deployment for your conditions
 
 ----
 5. Enter the following command in the command box to install the PNX Quick Deployment Tool, once installed, you will be able to use the PNX-CLI related commands wherever you are in the command box
-**:warning:Note: You will need to restart CMD or PowerShell after the installation is complete**
+**Note: You will need to restart CMD or PowerShell after the installation is complete**
 ```
 pnx sys-install
 ```
@@ -149,7 +107,7 @@ pnx jvm install=OracleJDK
 
 **Download process requires a waiting period**
 
-##### :computer:GraalJIT Instant Compiler Installation Steps
+##### GraalJIT Instant Compiler Installation Steps
 
 1. First check if GraalJIT is installed
 ```
@@ -182,11 +140,11 @@ pnx libs -u
 ```
 11. Double-click PNX.exe to start the server
 
-    **:warning:Note: You need to install the relevant VC runtime libraries**
-### :tea:Steps to install PNX server based on PNX-CLI-Linux-x86(Arm)
-1. Download the PNX-CLI-Linux-x86(Arm).zip archive 【:earth_asia:[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
+    **Note: You need to install the relevant VC runtime libraries**
+### Steps to install PNX server based on PNX-CLI-Linux-x86(Arm)
+1. Download the PNX-CLI-Linux-x86(Arm).zip archive 【[Download](https://github.com/PowerNukkitX/PNX-CLI/releases)】
 2. After downloading, enter the following command 
-:warning:**Note: /xxx/xxx stands for the folder where your PNX-CLI-Linux-x86(Arm).zip is located**
+**Note: /xxx/xxx stands for the folder where your PNX-CLI-Linux-x86(Arm).zip is located**
 ```
 cd /xxx/xxx
 ```
@@ -195,7 +153,7 @@ cd /xxx/xxx
 unzip PNX-CLI-Linux-x86(Arm).zip
 ```
 4. Enter the following command in the command box to install the PNX Quick Deployment Tool, once installed, you will be able to use the PNX-CLI related commands wherever you are in the command box\
-**:warning:Note: You will need to restart the command terminal after the installation is complete**
+**Note: You will need to restart the command terminal after the installation is complete**
 ```
 pnx sys-install
 ```
@@ -249,7 +207,7 @@ pnx jvm install=OracleJDK
 
 **Download process requires a waiting period**
 
-##### :computer:GraalJIT Instant Compiler Installation Steps
+##### GraalJIT Instant Compiler Installation Steps
 
 1. First check if GraalJIT is installed
 
@@ -291,7 +249,7 @@ pnx libs -u
 ```
 pnx
 ```
-## :question:How do I get PNX to run for a long time on a Linux host?
+## How do I get PNX to run for a long time on a Linux host?
 ### To use the screen command, proceed in detail:
 1. Type the following command in the command box to check if screen is installed
 ```
@@ -299,14 +257,14 @@ which screen
 ```
 2. Enter the following command in the command box to install screen
 
-  **:warning:Note: Depends on the host system**
+  **Note: Depends on the host system**
 
-###### 🎯CentOS
+###### CentOS
 
 ```
 yum install screen
 ```
-###### 🎯Ubuntu
+###### Ubuntu
 
 ```
 apt-get install screen
